@@ -1,3 +1,9 @@
+globus-gridftp-server-control (7.0-1+gt6.@distro@) @distro@; urgency=low
+
+  * add support for x.abspath
+
+ -- Globus Toolkit <support@globus.org>  Tue, 07 Aug 2018 10:08:30 -0500
+
 globus-gridftp-server-control (6.3-1+gt6.@distro@) @distro@; urgency=low
 
   * force encryption on tls control channel
